--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue-next": "^0.15.5",
     "element-plus": "^2.5.1",
+    "jp-prefectures": "^2.0.1",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "sass": "^1.69.7",
