--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "v-calendar": "^2.4.2",
     "vue": "^3.3.11",
     "vue-router": "^4.0.13",
-    "vue-select": "^3.20.2",
+    "vue-select": "^4.0.0-beta.6",
     "vue3-apexcharts": "^1.4.4"
   },
   "devDependencies": {
